# sharptask

./: Cargo.toml  README.md
src/: config.rs  main.rs  taskparser.rs  tasksync.rs  testutil.rs
tests/: .taskrc  integration_test.rs  simple.md
tests/vault/: a.md  b.md
